admin/deploy/django-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rso-deploy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producthandler-deployment
  namespace: rso-deploy
  labels:
    app: producthandler-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producthandler-api
  template:
    metadata:
      labels:
        app: producthandler-api
        component: backend
    spec:
      containers:
        - name: producthandler-api
          image: zankor/products-data:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: producthandler-service
  namespace: rso-deploy
  labels:
    app: producthandler-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: producthandler-api
    component: backend
---
