admin/deploy/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producthandler-api
  namespace: rso-deploy
  labels:
    app: productHandler
spec:
  selector:
    matchLabels:
      app: productHandler
  template:
    metadata:
      labels:
        app: productHandler
        component: backend
    spec:
      containers:
        - name: productHandler-backend
          image: zankor/products-data:latest
          name: products-data
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: producthandler-api
  namespace: rso-deploy
  labels:
    app: strapi
spec:
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
  selector:
    app: productHandler
    component: backend
  type: ClusterIP

---
