admin/deploy/psql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: rso-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-container
  template:
    metadata:
      labels:
        name: postgres-container
        tier: backend
    spec:
      containers:
        - name: postgres-container
          image: postgres:10.4
          ports:
            - containerPort: 5432
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: rso-deploy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rso-deploy-postgres
  namespace: rso-deploy
spec:
  type: NodePort
  selector:
    name: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
