admin/deploy/producthandler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-handler-ingress
  namespace: rso-deploy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2  

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /shoppingBasket(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: shoppingbasket-service
                port:
                  number: 8080
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: producthandler-service
                port:
                  number: 8000
